[package]
name = "texture-packer"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = { version = "0.24.2", features = ["serde"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
rectangle-pack = "0.4.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
